--- a/teoria/0_introduction.ipynb
+++ b/teoria/0_introduction.ipynb
@@ -181,11 +181,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<span style=\"float: left\">  [<- Index](.) </span>\n",
+    "<span style=\"float: right\"> [1_basics ->](./1_basics.ipynb) </span>"
+   ]
   }
  ],
  "metadata": {
