--- a/teoria/1_basics.ipynb
+++ b/teoria/1_basics.ipynb
@@ -109,6 +109,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Todas estas operaciones podemos utilizar la construcción `a += b` en lugar de `a = a + b`.\n",
+    "No disponemos pero de operaciones tipo `++a` o `--b`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Strings\n",
     "\n",
     "Los literales de tipo String se pueden definir tanto con comillas simples como dobles. En cualquiera de los casos el carácter de escape el la barra invertida `\\`. En Python3 la codificación por defecto es UTF-8\n",
@@ -155,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +178,8 @@
       " ----------\n",
       "        \\   ^__^\n",
       "         \\  (oo)\\_______\n",
-      "            (__)\\       )\\/             U  ||----w |\n",
+      "            (__)\\       )\\/\\\n",
+      "             U  ||----w |\n",
       "                ||     ||\n",
       "\n"
      ]
@@ -229,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Indices\n",
+    "# Indices\n",
     "\n",
     "Al final podemos ver los Strings como un vector de caracteres (pese a que no es como funcionan en Python).\n",
     "Como los string on más fáciles de manipular explicaremos su funcionamiento asi como la característica de slides (subsegmentos).\n",
@@ -265,14 +274,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos extraer segmentos de un string utilizando `variable[a:b]` dónde _a_ y _b_ representa el segmento \\[a, b). Si omitimos _a_ se asume _0_ y si lo que omitimos es _b_ se asume _-1_. Si nos pasamos de indices no se genera ningún error, si no que se obtiene el indice correcto más cercano, en algunos casos resultando en un string vacío.\n",
+    "Podemos extraer segmentos de un string utilizando `variable[a:b]` dónde _a_ y _b_ representa el segmento \\[a, b). Si omitimos _a_ se asume _0_ y si lo que omitimos es _b_ se asume _-1_. Si nos pasamos de indices no se genera ningún error, sino que se obtiene el indice correcto más cercano, en algunos casos resultando en un string vacío.\n",
     "\n",
     "Finalmente podemos obtener la longitud con `len(variable)`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -311,6 +320,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Listas\n",
+    "\n",
+    "Las listas (a veces se les llama _vectores_) son una estructura de datos que guardo otros datos en una secuencia fija.\n",
+    "\n",
+    "Python dispone de muchas funciones y elementos para manipularlos. Como individualmente no son complejos, veamoslos en un código comentado a modo de introducción:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "3\n",
+      "[1, -1, 'tres']\n",
+      "[-1, 'tres']\n",
+      "[1, 9, 8, 'tres']\n",
+      "[1, 9, 8, 'tres', 'zero']\n",
+      "[1, 9, 'dos', 8, 'tres', 'zero']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = []  # Definición lista vacía\n",
+    "print( type(a) )\n",
+    "b = [1, 2, \"tres\"]  # Declaración con valores harcoded de diferente tipo\n",
+    "\n",
+    "# Podemos aplicar los elementos vistos anteriormente:\n",
+    "print( len(b) )\n",
+    "b[1] = b[0]*-1\n",
+    "print( b )\n",
+    "print( b[-2:])\n",
+    "\n",
+    "b[1:2] = [9, 8, 7][:2]\n",
+    "print(b)\n",
+    "\n",
+    "b.append(\"zero\")\n",
+    "print(b)\n",
+    "b.insert(2, \"dos\")\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Enlaces\n",
     "* [Python tutorial - An informal Introduction \\[en\\]](https://docs.python.org/3/tutorial/introduction.html)"
    ]
@@ -318,6 +377,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<span style=\"float: left\">  [<- 0_introduction](./0_introduction.ipynb) </span>\n",
+    "<span style=\"float: right\"> [? ->](./5_functions.ipynb) </span>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
