--- a/teoria/5_functions.ipynb
+++ b/teoria/5_functions.ipynb
@@ -386,8 +386,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- [<- Previous - 4_control_flow](./4_control_flow.ipynb)\n",
-    "- [-> Next -?](./5_functions.ipynb)\n"
+    "<span style=\"float: left\">  [<- 4_control_flow](./4_control_flow.ipynb) </span>\n",
+    "<span style=\"float: right\"> [? ->](./5_functions.ipynb) </span>"
    ]
   },
   {
