--- a/teoria/1_basics.ipynb
+++ b/teoria/1_basics.ipynb
@@ -370,8 +370,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Booleans\n",
+    "\n",
+    "Los literales booleanos son `True` y `False`.\n",
+    "\n",
+    "Los operadores lógicos son, de mayor a menor preferencia: `not`, `and`, `or`.\n",
+    "También tenemos operadores de comparación como: `<`, `<=`, `>`, `>=`, `!=`, `==`.\n",
+    "Finalmente disponemos de operadores de identidad y pertenencia a conjunto: `in`, `not in`, `is`, `is not`\n",
+    "\n",
+    "Veamos ejemplos sobre esto:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = True and not False or False   # -> True\n",
+    "b = 2 <= 4  # -> True\n",
+    "c = 2 in [1, 3, 6]  # -> False\n",
+    "d = c\n",
+    "print(d is c)  # cuando cuando trabajamos con objetos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Enlaces\n",
-    "* [Python tutorial - An informal Introduction \\[en\\]](https://docs.python.org/3/tutorial/introduction.html)"
+    "* [Python tutorial - An informal Introduction \\[en\\]](https://docs.python.org/3/tutorial/introduction.html)\n",
+    "* [Python reference - Expressions \\[en\\]](https://docs.python.org/3/reference/expressions.html#grammar-token-expression)"
    ]
   },
   {
