--- a/problemas/1_basics.ipynb
+++ b/problemas/1_basics.ipynb
@@ -14,23 +14,9 @@
     "solution2_first": true
    },
    "source": [
-    "La pelicula \"Emoji\" fue un fracaso y despidieron a los personajes. Vemos a darles otra oportunidad, imprímelos por pantalla: `🐧🐍😁😅😜😱🐍🐧\""
+    "### Notebook\n",
+    "La pelicula \"Emoji\" fue un fracaso y despidieron a los personajes. Vemos a darles otra oportunidad, imprímelos por pantalla: \"🐧🐍😁😅😜😱🐍🐧\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🐧🐍😁😅😜😱🐍🐧\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -58,6 +44,7 @@
     "solution2_first": true
    },
    "source": [
+    "### Literales y print\n",
     "Imprime por pantalla el literal `I'm a \"teapot\\n\"` utilizando __24__ caracteres o menos."
    ]
   },
@@ -87,6 +74,7 @@
     "solution2_first": true
    },
    "source": [
+    "### Números\n",
     "Obtén el resultado de esta operación utilizando Python (-;\n",
     "<img src=\"img/formula1.png\", width=333 >"
    ]
@@ -120,6 +108,7 @@
     "solution2_first": true
    },
    "source": [
+    "### Indices y segmentos\n",
     "Un miembro de WindowsUPC ha desordenado el literal \"Python\".\n",
     "\n",
     "Si partimos de la definición `py = \"onhPyt\"`, pon el contenido adecuado en los `[]` para que el texto esté ordenado:\n",
@@ -155,6 +144,8 @@
     "solution2_first": true
    },
    "source": [
+    "### Operadores lógicos\n",
+    "\n",
     "Define tres variables `a`, `b` y `c` y asignales un valor booleano. A partir de estas variables imprime por pantalla el resultado de este circuito:\n",
     "\n",
     "<img src=\"img/bool.gif\", width=600 >\n",
@@ -181,8 +172,49 @@
    ],
    "source": [
     "a, b, c = True, False, True\n",
-    "s = (a and b and c) or (a and (not b or not c))\n",
+    "q = (a and b and c) or (a and (not b or not c))\n",
     "print(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Primera función\n",
+    "\n",
+    "Tenemos una función que recibe dos strings `a` y `b`\n",
+    "\n",
+    "Haz que la función retorne un string con `a` y `b` separados con un espació excepto que los primeros dos caracteres de cada string estén intercambiados.\n",
+    "\n",
+    "Por ejemplo: \"dog\", \"dinner\" ->; \"dig donner\"\n",
+    "\n",
+    "``` py\n",
+    "def mix_up(a, b):\n",
+    "    # +++your code here+++\n",
+    "    return valor\n",
+    "\n",
+    "print(mix_up(\"dog\", \"dinner\"))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dig donner\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mix_up(a, b):\n",
+    "    return b[:2] + a[2:] + \" \" + a[:2] + b[2:]\n",
+    "    \n",
+    "print(mix_up(\"dog\", \"dinner\"))"
    ]
   },
   {
@@ -190,9 +222,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "s = a and b and c"
-   ]
+   "source": []
   }
  ],
  "metadata": {
