--- a/teoria/0_introduction.ipynb
+++ b/teoria/0_introduction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# El cuso"
+    "# El curso"
    ]
   },
   {
@@ -212,6 +212,8 @@
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": "block",
