--- a/teoria/1_basics.ipynb
+++ b/teoria/1_basics.ipynb
@@ -238,6 +238,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Print y string formatting\n",
+    "\n",
+    "PLa función `print` hace algunas cosas por nosotros de manera implícita, pero no tengo ganas de explicarlo \\_*^*_/. Busca en la documentación esta parte de la teoría. En interpretes IPython puedes poner un interrogante después del nombre de la función para leer la documentación. Alternativamente puedes consultar la documentación oficial que encontraras al final del documento,\n",
+    "\n",
+    "No son pocas las situaciones en las que necesitamos intercalar variables en un String. Por ello Python nos ofrece muchos métodos para hacerlo. El más simple es la funcionalidad de string template.\n",
+    "\n",
+    "\n",
+    "La forma \"old style\" de hacerlo consiste en utilizar el carácter `%` como _template token_:\n",
+    "```py\n",
+    "text = \"Cuantos %s hacen falta para instalar Linux? %d\" % (\"fibers\", 2)\n",
+    "```\n",
+    "\n",
+    "Sin embargo en las nuevas versiones disponemos de `f-string' que se basa en claudator y es más potente. Veámoslo con unos ejemplos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cuantos telecos hacen falta para instalar Linux? 3\n",
+      "Cuantos telecos hacen falta para instalar Linux? 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Cuantos {} hacen falta para instalar Linux? {}\".format(\"telecos\", 3))\n",
+    "print(\"Cuantos {fibers} hacen falta para instalar Linux? {numero}\".format(numero=3, fibers=\"telecos\"))\n",
+    "\n",
+    "fibers = \"fibers\"\n",
+    "numero = 2\n",
+    "# A partir de Python3.6 podemos utilizar la siguiente forma (fijaros en la 'f' inicial)\n",
+    "# f'Cuantos {fibers} hacen falta para instalar Linux? {numero}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Indices\n",
     "\n",
     "Al final podemos ver los Strings como un vector de caracteres (pese a que no es como funcionan en Python).\n",
@@ -383,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -406,6 +449,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Cast\n",
+    "\n",
+    "En la moyoria de situaciones no tenemos que preocuparnos de los tipos de las variables gracias a el tipado dinámico y al alto nivel de la mayoria de funciones del lenguajes.\n",
+    "\n",
+    "Pese a ello si nos vemos en una situación en la que requerimos pasar de un tipo a otro de forma explicita basta en que utilicemos el nombre del tipo como una función y le pasemos el valor a convenir:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"2\"\n",
+    "# print(a + 3)  # Error\n",
+    "print(int(a) + 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Enlaces\n",
     "* [Python tutorial - An informal Introduction \\[en\\]](https://docs.python.org/3/tutorial/introduction.html)\n",
     "* [Python reference - Expressions \\[en\\]](https://docs.python.org/3/reference/expressions.html#grammar-token-expression)"
@@ -416,7 +489,7 @@
    "metadata": {},
    "source": [
     "<span style=\"float: left\">  [<- 0_introduction](./0_introduction.ipynb) </span>\n",
-    "<span style=\"float: right\"> [? ->](./5_functions.ipynb) </span>\n"
+    "<span style=\"float: right\"> [2_contol_flow ->](./2_control_flow.ipynb) </span>\n"
    ]
   },
   {
@@ -450,8 +523,15 @@
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "256px"
+   },
    "toc_section_display": "block",
    "toc_window_display": false
   },
