--- a/teoria/3_functions.ipynb
+++ b/teoria/3_functions.ipynb
@@ -386,8 +386,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"float: left\">  [<- 4_control_flow](./4_control_flow.ipynb) </span>\n",
-    "<span style=\"float: right\"> [? ->](./5_functions.ipynb) </span>"
+    "<span style=\"float: left\">  [<- 2_control_flow](./2_control_flow.ipynb) </span>\n",
+    "<span style=\"float: right\"> [4_data_structures->](./4_data_structures.ipynb) </span>"
    ]
   },
   {
@@ -421,8 +421,6 @@
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
-   "title_cell": "Table of Contents",
-   "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": "block",
